feat: new mobile app WIP. much more to come.
